--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="textbox">
       <img src="./images/unnamed.png" alt="Snow" style="width:100%;height:100%;"/>
       <div class="textdiv">
-        <a class="text" id = "t">Hi I'm virtual Kieran and here for you when you are feeling needy. Just click the button below so I can help out!</a>
+        <a class="text" id = "t">Hi I'm virtual Kieran and here for you when you are feeling needy. Just click the button below so I can help out! I got some new lines too!</a>
       </div>
 
     </div>
